fix: new game and how to play buttons z-index over cards

--- a/src/components/vars.scss
+++ b/src/components/vars.scss
@@ -54,6 +54,15 @@ $bp-xl: 1366px;
   --pd-md: var(--vr);
   --pd-lg: calc(var(--vr) * 2);
 
+  // z-index.
+  --z-modal: 9000;
+  --z-overlay: 8000;
+  --z-header: 7000;
+  --z-footer: 6000;
+  --z-default: 1;
+  --z-below: -1;
+  --z-bottomless-pit: -9000;
+
   // Cards
   --card-width: 33px;
   --card-height: calc(var(--card-width) * 1.4);
